# finbrodataprep

./: .gitignore  README.md  main.py  pyproject.toml  run_tests.py  test_setup.py
fundamentals/: alphavantage.py  finances.py  fmp.py
news/: README.md  news_collator.py
news_sentiment/: news_collator.py
pipelines/: pipelines.py
prompts/: news_sentiment_company.md  news_sentiment_sector.md  news_summary.md  stock_rating.md
ratings/: rater.py
screening/: finviz.py
tests/: main_tests.py  test_alphavantage.py  test_basic.py  test_finviz_screener.py  test_sentiment_collator.py
utils/: config.py
